// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to ignore resolution 2`] = `
[
  "[arethetypeswrong] test-no-resolution v0.0.0

 (ignoring resolutions: 'node16-cjs', 'node16-esm')

💀 Import failed to resolve to type declarations or JavaScript files. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/NoResolution.md


┌───────────────────┬────────────────────────────────┐
│                   │ "test-no-resolution"           │
├───────────────────┼────────────────────────────────┤
│ node10            │ 💀 Resolution failed           │
├───────────────────┼────────────────────────────────┤
│ bundler           │ 💀 Resolution failed           │
├───────────────────┼────────────────────────────────┤
│ node16 (from CJS) │ (ignored) 💀 Resolution failed │
├───────────────────┼────────────────────────────────┤
│ node16 (from ESM) │ (ignored) 💀 Resolution failed │
└───────────────────┴────────────────────────────────┘",
]
`;

exports[`should not throw when no-resolution is ignored 1`] = `
[
  "[arethetypeswrong] test-no-resolution v0.0.0

 (ignoring rules: 'no-resolution')

 No problems found 🌟
┌───────────────────┬──────────────────────┐
│                   │ "test-no-resolution" │
├───────────────────┼──────────────────────┤
│ node10            │ 🟢                   │
├───────────────────┼──────────────────────┤
│ node16 (from CJS) │ 🟢                   │
├───────────────────┼──────────────────────┤
│ node16 (from ESM) │ 🟢                   │
├───────────────────┼──────────────────────┤
│ bundler           │ 🟢                   │
└───────────────────┴──────────────────────┘",
]
`;

exports[`should throw when cannot resolve types 2`] = `
[
  "[arethetypeswrong] test-no-resolution v0.0.0

💀 Import failed to resolve to type declarations or JavaScript files. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/NoResolution.md


┌───────────────────┬──────────────────────┐
│                   │ "test-no-resolution" │
├───────────────────┼──────────────────────┤
│ node10            │ 💀 Resolution failed │
├───────────────────┼──────────────────────┤
│ node16 (from CJS) │ 💀 Resolution failed │
├───────────────────┼──────────────────────┤
│ node16 (from ESM) │ 💀 Resolution failed │
├───────────────────┼──────────────────────┤
│ bundler           │ 💀 Resolution failed │
└───────────────────┴──────────────────────┘",
]
`;
